[package]
name = "geekorm-testing"
version = "0.1.3"
edition = "2021"

[dependencies]
geekorm = { path = "../geekorm", features = ["all", "backends", "libsql", "backends-tokio", "migrations", "hash-sha512"] }

libsql = "0.6"
anyhow = { version = "1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
totp-rs = "5.5"
db = { version = "0.1.0", path = "db" }

